objects/WebServiceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for external web service endpoints and credentials.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the service is active. If Active is unchecked then no callouts to this service will be allowed.</description>
        <inlineHelpText>Determines if the service is active. If Active is unchecked then no callouts to this service will be allowed.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>The web service url as defined by the service provider</description>
        <inlineHelpText>The web service url as defined by the service provider</inlineHelpText>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_GLI_Count__c</fullName>
        <description>Used for getting max number of GLI records from CDS for Lead Conversion functionality.</description>
        <label>Max GLI Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Non_GLI_Count__c</fullName>
        <description>Used to get maximum number of CDS contacts from CDS for the Lead Conversion functionality.</description>
        <label>Max Non GLI Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>The password required by the service provider for authentication</description>
        <inlineHelpText>The password required by the service provider for authentication</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Unavailable_Message__c</fullName>
        <description>The message displayed to the user in the event the service is inactive or unavailable for use</description>
        <inlineHelpText>The message displayed to the user in the event the service is inactive or unavailable for use</inlineHelpText>
        <label>Service Unavailable Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Length of time (in seconds) the callout waits for a response from the service provider before producing an error</description>
        <inlineHelpText>Length of time (in seconds) the callout waits for a response from the service provider before producing an error</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username required by the service provider for authentication</description>
        <inlineHelpText>The username required by the service provider for authentication</inlineHelpText>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Web Service Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Password__c</columns>
        <columns>Service_Unavailable_Message__c</columns>
        <columns>Timeout__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>